feat: cambiato il packet manager a pnpm e creato il grafico di analitics
